[package]
name = "tx3-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dotenv = "0.15.0"
hex = "0.4.3"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["transport-sse-server", "transport-io"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "signal"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tx3-sdk = { git = "https://github.com/tx3-lang/rust-sdk" }
tx3-lang = { git = "https://github.com/tx3-lang/tx3" } 
tracing = "0.1.41"
cynic = { version = "3.11.0", features = ["http-surf"] }
surf = "2.3.2"

[build-dependencies]
cynic-codegen = { version = "3" }

[[bin]]
name = "sse"
path = "src/bin/sse.rs"

[[bin]]
name = "stdio"
path = "src/bin/stdio.rs"
